# plagentic

./: .gitignore  Dockerfile  README.md  TODO.md  config-template.yaml  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
plagentic/: __init__.py
plagentic/cli/: __init__.py  cli.py
plagentic/docs/: sdk.md
plagentic/sdk/: __init__.py
plagentic/sdk/common/: __init__.py
plagentic/sdk/common/config/: configManager.py
plagentic/sdk/common/enums/: __init__.py  modelEnums.py
plagentic/sdk/common/utils/: __init__.py  loadingIndicator.py  log.py  stringUtil.py  xmlUtil.py
plagentic/sdk/core/: __init__.py  agent.py  context.py  result.py  task.py  team.py
plagentic/sdk/models/: __init__.py  modelFactory.py
plagentic/sdk/models/llm/: __init__.py  baseModel.py  claudeModel.py  deepseekModel.py  openaiModel.py
plagentic/sdk/tools/: __init__.py  baseTool.py  toolManager.py
plagentic/sdk/tools/browser/: browserTool.py
plagentic/sdk/tools/fileSave/: __init__.py  saveFile.py
plagentic/sdk/tools/googleSearch/: searchGoogle.py
plagentic/sdk/tools/terminal/: terminal.py
teams/: team-template.yaml
